--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main class="main_background">
       <section class="advice_box">
-        <h2 class="advice_title">Advice #</h2>
+        <h2 class="advice_title">Advice #1</h2>
         <h1 class="advice_description">Clique no botão para gerar um conselho.</h1>
         <button>X</button>
       </section>
