--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
-    <title>Advice Generator</title>
-    <link>
-  </head>
-  <body>
-    <main class="main_background">
-      <section class="advice_box">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css" />
+  <title>Advice Generator</title>
+  <link>
+</head>
+
+<body>
+  <main class="main_background">
+    <section class="advice_box">
+      <div class="advice_content">
         <h2 class="advice_title">Advice #1</h2>
         <h1 class="advice_description">Clique no botão para gerar um conselho.</h1>
-        <button>X</button>
-      </section>
-    </main>
-  </body>
+      </div>
+      <div class="advice_footer">
+        <img class="advice_divider" src="./assets/pattern-divider-desktop.svg"
+          srcset="./assets/pattern-divider-mobile.svg 400w">
+        <button class="generate_advice_button"></button>
+      </div>
+    </section>
+  </main>
+  <script src="./script.js"></script>
+</body>
+
 </html>
